    Update extra-enforcer-rules from 1.3 to 1.4
    Update guava from 30.1.1-jre to 31.0.1-jre
    Update influxdb-java from 2.21 to 2.22
    Update jackson.version from 2.12.4 to 2.13.0
    Update jersey from 2.34 to 2.35
    Update jetty.version from 9.4.43.v20210629 to 9.4.44.v20210927
    Update joda-time from 2.10.10 to 2.10.12
    Update jooq from 3.14.13 to 3.14.15
    Update kotlin-stdlib-common from 1.5.21 to 1.5.31
    Update logback.version from 1.2.5 to 1.2.6
    Update maven-javadoc-plugin from 3.3.0 to 3.3.1
    Update netty.version from 4.1.66.Final to 4.1.69.Final
    Update redisson from 3.16.1 to 3.16.3
    Update spotbugs-annotations from 4.4.1 to 4.4.2
    Update spotbugs-maven-plugin from 4.2.0 to 4.4.1
    Update swagger.version from 1.6.2 to 1.6.3
    Switch from org.skife.config:config-magic to org.kill-bill.commons:killbill-config-magic

0.144.64
    Update killbill-client from 1.2.4 to 1.2.5

0.144.63
    Update killbill-platform from 0.40.9 to 0.40.10

0.144.62
    Update killbill-platform from 0.40.8 to 0.40.9

0.144.61
    Update killbill-base-plugin from 4.2.13 to 4.2.14

0.144.60
    Update killbill-commons from 0.24.15 to 0.24.16

0.144.59
    Update byte-buddy from 1.11.8 to 1.11.12
    Update checker-qual from 3.16.0 to 3.17.0
    Update ehcache from 3.9.4 to 3.9.5
    Update git-commit-id-plugin from 4.0.5 to 4.9.10
    Update janino from 3.1.4 to 3.1.6
    Update jaxb-runtime from 2.3.4 to 2.3.5

0.144.58
    Update killbill-client from 1.2.3 to 1.2.4

0.144.57
    Update killbill-platform from 0.40.7 to 0.40.8

0.144.56
    Update killbill-base-plugin from 4.2.12 to 4.2.13

0.144.55
    Downgrade jooq to 3.14.13

0.144.54
    Update killbill-commons from 0.24.14 to 0.24.15

0.144.53
    Add com.sun.activation:jakarta.activation 2.0.1
    Add io.jsonwebtoken:jjwt-api:0.11.2
    Add io.jsonwebtoken:jjwt-impl:0.11.2
    Add io.jsonwebtoken:jjwt-jackson:0.11.2
    Add org.glassfish.jaxb:jaxb-runtime 2.3.4