@@ -121,7 +121,7 @@
         <killbill-api.version>0.53.17</killbill-api.version>
         <killbill-base-plugin.version>4.2.14</killbill-base-plugin.version>
         <killbill-client.version>1.2.5</killbill-client.version>
-        <killbill-commons.version>0.24.16</killbill-commons.version>
+        <killbill-commons.version>0.24.17</killbill-commons.version>
         <killbill-platform.version>0.40.10</killbill-platform.version>
         <killbill-plugin-api.version>0.26.4</killbill-plugin-api.version>
         <logback.version>1.2.6</logback.version>
