@@ -10,6 +10,7 @@
     Update jetty.version from 9.4.43.v20210629 to 9.4.44.v20210927
     Update joda-time from 2.10.10 to 2.10.12
     Update jooq from 3.14.13 to 3.14.15
+    Update killbill-commons from 0.24.16 to 0.24.17
     Update kotlin-stdlib-common from 1.5.21 to 1.5.31
     Update logback.version from 1.2.5 to 1.2.6
     Update maven-javadoc-plugin from 3.3.0 to 3.3.1
